--- a/src/app/components/proveedores/proveedores.component.html
+++ b/src/app/components/proveedores/proveedores.component.html
@@ -89,7 +89,7 @@
     <!--campo ProveedorCodigo-->
     <div class="form-group row">
       <label class="col-form-label col-sm-2 offset-sm-2" for="ProveedorCodigo">
-        Codigo De Barra <span class="text-danger">*</span>
+        Codigo De  <span class="text-danger">*</span>
       </label>
       <div class="col-sm-6">
         <input
