--- a/src/app/components/proveedores/proveedores.component.html
+++ b/src/app/components/proveedores/proveedores.component.html
@@ -1,7 +1,7 @@
 <h3>{{Titulo}} <small>{{TituloAccionABMC[AccionABMC]}}</small></h3>
 
 <!-- Formulario Filtro de búsqueda, se ve cuando la AccionABMC es "L"(busqueda/listado)-->
-<form name="FormBusqueda" [formGroup]="FormBusqueda" class="bg-light" *ngIf="AccionABMC == 'L'">
+<form name="FormBusqueda" class="bg-light" *ngIf="AccionABMC == 'L'">
   
   <!-- Botones -->
   <div class="row justify-content-center">
