--- a/src/app/components/proveedores/proveedores.component.html
+++ b/src/app/components/proveedores/proveedores.component.html
@@ -13,7 +13,7 @@
   </div>
 </form>
 
-<!-- Tabla de resutados de busqueda y Paginador-->
+<!-- Tabla de resultados de busqueda y Paginador-->
 <div id="divTablaResultados" *ngIf="AccionABMC == 'L' &&  Items?.length > 0">
   <table class="table table-bordered table-striped">
     <thead>
